--- a/package.json
+++ b/package.json
@@ -15,24 +15,25 @@
   "author": "Bryce Cummock",
   "license": "MIT",
   "devDependencies": {
+    "@aws-sdk/lib-dynamodb": "^3.986.0",
     "@types/aws-lambda": "^8.10.146",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.3",
     "@typescript-eslint/eslint-plugin": "^8.19.0",
     "@typescript-eslint/parser": "^8.19.0",
     "eslint": "^9.17.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-jsdoc": "^50.6.1",
-    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-prettier": "^5.5.5",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.986.0",
     "@aws-sdk/client-secrets-manager": "^3.749.0",
     "@aws-sdk/client-ssm": "^3.716.0",
-    "@thebetterstore/tbs-lib-infra-common": "^1.0.0",
     "aws-sdk": "^2.1692.0",
     "aws-xray-sdk-core": "^3.10.2",
     "esbuild": "^0.24.2",
